docs: add Resend integration guide

--- a/content/docs/advanced-users/index.mdx
+++ b/content/docs/advanced-users/index.mdx
@@ -5,16 +5,18 @@ description: Advanced features and customization options
 
 # Get Started
 
+Advanced guides for power users who want to customize Mailer to their needs.
+
+## Available Guides
+
+- **[Resend Integration](./advanced-users/resend-integration)** - Set up your own Resend account and custom sending domain
+
 ## Coming Soon
 
-We're working on comprehensive guides for advanced users who want to take full advantage of Mailer's powerful features.
+We're working on comprehensive guides for advanced users, including:
 
-### Topics We're Covering
-
-- **Custom Domain Setup** - Configure your own sending domain
 - **Advanced Segmentation** - Create complex audience segments
 - **Custom Templates** - Build custom HTML email templates
 - **Advanced Analytics** - Deep dive into your campaign performance
-- **Deliverability** - Maximize inbox placement
 
-Check back soon for detailed advanced user guides!
+Check back soon for more detailed guides!
