docs: add member management documentation

--- a/content/docs/organizers/index.mdx
+++ b/content/docs/organizers/index.mdx
@@ -118,4 +118,5 @@ Now that you have an account, you're ready to:
 - Manage your organization
 - Import contacts
 - Design and send your first email campaign
+- [Invite team members](/docs/organizers/team-collaboration) to collaborate
 - Explore our [best practices](/docs/organizers/best-practices) guide
