docs: add 2FA guide doc

--- a/content/docs/organizers/index.mdx
+++ b/content/docs/organizers/index.mdx
@@ -115,6 +115,7 @@ Use your new password to log in to your account.
 
 Now that you have an account, you're ready to:
 
+- [Enable Two-Factor Authentication](/docs/organizers/two-factor-authentication) for extra security
 - Manage your organization
 - Import contacts
 - Design and send your first email campaign
