--- a/content/docs/organizers/index.mdx
+++ b/content/docs/organizers/index.mdx
@@ -116,8 +116,8 @@ Use your new password to log in to your account.
 Now that you have an account, you're ready to:
 
 - [Enable Two-Factor Authentication](/docs/organizers/two-factor-authentication) for extra security
-- Manage your organization
-- Import contacts
+- [Add and manage contacts](/docs/organizers/managing-contacts)
+- [Import contacts from CSV](/docs/organizers/importing-contacts)
 - Design and send your first email campaign
 - [Invite team members](/docs/organizers/team-collaboration) to collaborate
 - Explore our [best practices](/docs/organizers/best-practices) guide
