--- a/content/docs/organizers/index.mdx
+++ b/content/docs/organizers/index.mdx
@@ -118,6 +118,6 @@ Now that you have an account, you're ready to:
 - [Enable Two-Factor Authentication](/docs/organizers/two-factor-authentication) for extra security
 - [Add and manage contacts](/docs/organizers/managing-contacts)
 - [Import contacts from CSV](/docs/organizers/importing-contacts)
-- Design and send your first email campaign
+- [Create and send your first email campaign](/docs/organizers/creating-emails)
 - [Invite team members](/docs/organizers/team-collaboration) to collaborate
 - Explore our [best practices](/docs/organizers/best-practices) guide
