docs: clarify language in guide docs

--- a/content/docs/organizers/creating-emails.mdx
+++ b/content/docs/organizers/creating-emails.mdx
@@ -5,7 +5,7 @@ description: Design and build email campaigns
 
 # Creating Email Campaigns
 
-Create email campaigns to send to your contacts.
+Create email campaigns to send to a set of contacts.
 
 ## Creating a Campaign
 
