--- a/content/docs/organizers/custom-fields.mdx
+++ b/content/docs/organizers/custom-fields.mdx
@@ -16,7 +16,7 @@ Custom fields let you store additional information about your contacts beyond th
    - **Name**: Internal identifier (no spaces)
    - **Label**: Display name
    - **Type**: Data type
-   - **Required**: Whether field must be filled
+   - **Required**: Whether field must be filled for every contact
    - **Description**: Optional help text
 5. Click Save
 
@@ -84,7 +84,7 @@ Filter contacts by custom field values or create segments based on custom field 
 
 ## Organization-Wide Fields
 
-Custom fields are defined at the organization level and available across all audience lists in your organization.
+Custom fields that are defined at the organization level are available across all audience lists in your organization.
 
 ## Best Practices
 
