--- a/content/docs/organizers/importing-contacts.mdx
+++ b/content/docs/organizers/importing-contacts.mdx
@@ -118,7 +118,6 @@ The import report shows which rows failed and why.
 - Use UTF-8 encoding
 - First row must be column headers
 - Use commas as delimiters
-- Enclose values containing commas in quotes
 
 ## Best Practices
 
@@ -148,7 +147,7 @@ Check import report for specific errors. Common issues:
 
 - Ensure custom fields exist in your organization
 - Column names must match field names exactly
-- Check data types match field definitions
+- Check data types in your CSV match field definitions
 
 ## Next Steps
 
